# envi-nmt-transformer

./: .gitignore  README.md  pyproject.toml  report.tex  requirements.txt
configs/: config.yaml
notebooks/: test_components.ipynb  test_loader_pipeline.ipynb
scripts/: download_data.py
src/: evaluate.py  inference.py  model.py  plot_loss.py  train.py  visualize_attention.py
src/data/: dataset.py  loader.py  tokenizer.py
src/layer/: attention.py  decoder.py  encoder.py  feed_forward.py  positional_encoding.py
src/utils/: __init__.py  decoding.py  mask.py  model_loader.py  scheduler.py  translate.py  utils.py  visualize.py
ui/: app.py
